# daw

./: bun.lockb  package.json  svelte.config.js  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/macros/: Cargo.toml
src-tauri/macros/src/: lib.rs
src-tauri/src/: audio.rs  main.rs
src/lib/: bindings.ts  utils.ts
src/lib/components/: combobox.svelte
src/lib/components/ui/command/: command-input.svelte
src/routes/: +layout.svelte  +page.svelte
