[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["unstable"] }
clap = { version = "4.5", features = ["derive"] }
cpal = "0.15"
anyhow = "1.0"
macros = { path = "./macros" }
hound = "3.5"
specta = { version = "2.0.0-rc", features = ["function", "typescript"] }
tauri-specta = { version = "2.0.0-rc", features = ["javascript", "typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[workspace]
members = [
    "macros",
]

